--- a/sascha/index.html
+++ b/sascha/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hangman-Spiel</title>
-		<link rel="stylesheet" href="index.css" />
+		<!-- <link rel="stylesheet" href="index.css" /> -->
+		<link rel="stylesheet" href="index_01.css" />
 	</head>
 	<body>
 		<h1>Hangman-Spiel</h1>
@@ -17,6 +18,17 @@
 		<div id="tastatur"></div>
 
 		<div id="ergebnis"></div>
+
+
+		<button onclick="toggleTheme('index.css')">
+			Light
+		</button>
+	
+		<button onclick="toggleTheme('index_01.css')">
+			Dark
+		</button>
+	
+		
 
 		<script src="index.js" defer></script>
 	</body>
