--- a/sascha/index.html
+++ b/sascha/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="index_01.css" />
 	</head>
 	<body>
-		<h1>Hangman-Spiel</h1>
+		<h1 class="text">Hangman-Spiel</h1>
 
 		<input type="text" id="wortfeld" autocomplete="off" />
 		<!-- placeholder="Gib ein Wort ein und drücke Enter, um das Spiel zu starten." -->
