steffen no music

--- a/steffen_new/index.html
+++ b/steffen_new/index.html
@@ -21,7 +21,7 @@
 				></div>
 			</div>
 			<input
-				type="text"
+				type="password"
 				id="wortfeld"
 				autocomplete="off"
 				placeholder="Text eingeben"
