--- a/z_jannik/index.html
+++ b/z_jannik/index.html
@@ -12,7 +12,9 @@
 		<audio id="backgroundMusic" src="../andereDateien/eating-sound-effect-36186.mp3"></audio>
 
 
-		<h1 class="text">Hangman-Spiel</h1>
+		<h1 class="text">Snickers-Game</h1>
+
+		<div id = "hinweis"></div>
 
 		<input type="password" id="wortfeld" autocomplete="off" /><!-- placeholder="Gib ein Wort ein und drücke Enter, um das Spiel zu starten." -->
 		
@@ -25,8 +27,8 @@
 		<div
 					id="snickers"
 					style="
-						background-image: url('../andereDateien/images/snickers/snickers_01.png');
-						background-size: cover;
+						background-image: url('../andereDateien/images/snickers/snickers_01_c.png');
+						background-size:cover;
 					"
 				></div>
 
