dateien in projektordner verschoben

--- a/z_jannik/index.html
+++ b/z_jannik/index.html
@@ -9,9 +9,9 @@
 
 	<body>
 
-		<audio id="backgroundMusic" src="../andereDateien/eating-sound-effect-36186.mp3"></audio>
+		<audio id="backgroundMusic" src="./snickers/eating-sound-effect-36186.mp3"></audio>
 
-
+        <div class="overlay"
 		<h1 class="text">Snickers-Game</h1>
 
 		<div id = "hinweis"></div>
@@ -27,7 +27,7 @@
 		<div
 					id="snickers"
 					style="
-						background-image: url('../andereDateien/images/snickers/snickers_01_c.png');
+						background-image: url('./snickers/snickers_01_c.png');
 						background-size:cover;
 					"
 				></div>
